# login_server

./: .gitignore  Makefile.am  configure.ac  dclogin.c  login.c  login.h  login_packets.c
l10n/: Makefile.am  login-strings.txt  login_server-de.yts  login_server-fr.yts  login_server-sp.yts
patch/dreamcast/: patch_stub.s  version_detect.s
patch/gamecube/: patch_stub.s  version_detect.s
src/: bbcharacter.c  bblogin.c  dclogin.c  login.c  login.h  login_packets.c  login_packets.h  login_server.c  packets.h  patch.c  patch.h  patch_stubs.h  player.h
